2006-02-21  Hans Rakers <hans at parse dot nl>

	* Ditched the variadic macros. They were kinda useless now anyway since
	  they were only passing one arg. This should make the Win32 folks happy
	  since VC6 doesn't seem to support variadic macros (its a C99 thing)
	* Removed some excessive debug output.

2006-02-20  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed bypassing open_basedir restriction when the file was already 
          cached. This fixes bug #1427719
        * Included patch #1435196 to fix the problem of duplicate keys that 
          don't get removed.

2006-02-20  Hans Rakers <hans at parse dot nl>

        * Fixed static_members handling for php-5.0. Broke this while
          working on PHP-5.1 support. Lost in ifdef statements ;)
        * Fixed ZE1 (<=PHP4) problem regarding parent class lookup during restore.
          Parent classname wasn't lowercased before lookup in class_table. This
          also fixes bug #1432758 (can't restore parent class "stdClass" of class xyz)

2006-02-19  Hans Rakers <hans at parse dot nl>

        * Restored PHP4 compatibility
        * Fixed inheritance/prototype issue with abstract methods and classes during
          restore. zend_do_inheritance handles these properly now.

2006-02-18  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Bumped up version to 0.9.5-dev

2006-02-17  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Merged PHP_5_1 branch with HEAD

2006-02-17  Hans Rakers <hans at parse dot nl>

        * PHP_5_1: Some final fixes before merging to HEAD:
          - Fixed bug #1410723 (handling of class constants by the optimizer)
          - Fixed backwards compatibility with PHP < 5.1
          This revision works pretty well in my testing environment, PHP-5.1 support
          seems to be coming along quite well. Please test with your applications/
          in your environment and report back with your experiences or possible problems!
